# formix

./: .gitignore  AGENT.md  Attempt.cpp  README.md  SKILLS.md  formix-project-architecture.md  next.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/auth/signin/: page.tsx
app/auth/signup/: page.tsx
app/compiler/: page.tsx
app/docs/: layout.tsx
app/docs/actions/: page.tsx
app/docs/compute/: page.tsx
app/docs/conditionals/: page.tsx
app/docs/examples/: page.tsx
app/docs/fields/: page.tsx
app/docs/form-structure/: page.tsx
app/docs/grammar/: page.tsx
app/docs/groups/: page.tsx
app/docs/introduction/: page.tsx
app/docs/layout/: page.tsx
app/docs/pages/: page.tsx
app/docs/quickstart/: page.tsx
app/docs/repeat/: page.tsx
app/docs/sources/: page.tsx
app/docs/syntax/: page.tsx
app/docs/ui-blocks/: page.tsx
app/docs/validation/: page.tsx
app/docs/variables/: page.tsx
app/editor/demo/: page.tsx
app/f/[formId]/: form-renderer.tsx  page.tsx
backend/: auth.py  check_db.py  database.py  main.py  models.py  requirements.txt  schemas.py  test_part5.py
backend/routers/: auth.py  forms.py  generators.py  projects.py
components/auth/: auth-layout.tsx
components/docs/: callout.tsx  code-block.tsx  docs-nav.tsx  docs-sidebar.tsx  ebnf-rule.tsx
components/editor/: ai-chat-panel.tsx  compiler-playground.tsx  demo-ide-shell.tsx  demo-workspace.tsx  markdown-preview.tsx
components/form-renderer/: index.tsx
components/landing/: animated-tetrahedron.tsx  architectural-grid.tsx  ast-visualizer.tsx  cta-section.tsx  demo-section.tsx  footer-section.tsx  hero-section.tsx  how-it-works-section.tsx  metrics-section.tsx  monaco-sandbox.tsx  navigation.tsx
forml-compiler/: ANALYSIS.md  CMakeLists.txt  EBNF_grammar.md  JSON_SCHEMA.md  build.bat  debug_out.txt
forml-compiler-curriculum/: 01_tokens_and_lexing.cpp  01_tokens_and_lexing.md  02_lexer_class.cpp  02_lexer_class.md  03_grammars_and_ebnf.cpp  04_ast_design.cpp  05_recursive_descent_basics.cpp  06_recursive_descent_full.cpp  07_left_recursion_problem.cpp  08_operator_precedence.cpp  09_error_handling_recovery.cpp  10_visitor_pattern.cpp  11_semantic_validation.cpp  12_json_serialization.cpp  13_putting_it_together.cpp  README.md
forml-compiler/examples/: main.cpp
forml-compiler/include/forml/: ast.hpp  ast_visitor.hpp  diagnostics.hpp  forml_bridge.hpp  json_serializer.hpp  lexer.hpp  parser.hpp  semantic_analyzer.hpp  token.hpp
forml-compiler/src/: ast.cpp  diagnostics.cpp  forml_bridge.cpp  json_serializer.cpp  lexer.cpp  parser.cpp  semantic_analyzer.cpp  token.cpp
forml-compiler/tests/: debug_05.cpp  test_json_serializer.cpp  test_lexer.cpp  test_parser.cpp  test_semantic.cpp
forml-compiler/tests/fixtures/: 01_strings_and_numbers.forml  02_nested_braces.forml  03_bad_characters.forml  04_soft_keyword_names.forml  05_deep_nesting.forml  06_malformed.forml  07_duplicate_field.forml  08_undefined_reference.forml  09_var_with_identifier.forml  10_validation_type_mismatch.forml  11_malformed_expression.forml
forml-compiler/wasm/: bindings.cpp  forml.js  index.html
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
hooks/: use-form-validation.ts
lib/: api.ts  forml-file-system.ts  forml-validate.ts  monaco-forml-language.ts  monaco-forml.ts  use-forml-compiler.ts
public/wasm/: forml.wasm
scratch/: compile.ps1  debug-browser.js  hello.js  hello.wasm  index.html  unzip_emsdk.py  verify_tests.js
